src/views/candidate/components/Job/Job.css
.container-wrapper{
  position: relative;
  max-width: 100%;
  top: -43px;
  padding-top: 114px;
  background: #E5E5E5;
}
.card {
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.12);
    transition: 0.3s;
    height: 11.5rem;
    border-left: 1px solid #C09F2C;
    border-radius: 10px;
    background: #fff;
    z-index: 1;
    margin: 4% 0;
    position: relative;
    padding: 2% 0;
  }
  
  .card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  }
  
  .container {
    padding: 2px 16px;
    width: 300px;
  }
  .detail{
    width: 80%;
    /* height: 19px; */

    
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    /* line-height: 19px; */
    
    color: #838383;
  }
 .dowell{
      line-height: 40px;
  }
  .skill{
    line-height: 19px;
    margin: 4% 0 0;
    font-size: 0.875rem;
      /* line-height: 81px; */
      
  }
  .detail.skill.full-width {
    width: 98%;
  }
  .apply-button{
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      right: 2%;
      padding: 3.285% 6.29%;
      background-color: #fff;
      border-radius: 10px;
      cursor: pointer;
      font-family:"inter";
      font-size: '14px';
      font-weight: 500;
      line-height: '16.94px';
      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
      transition: 0.3s;
      border: 1px solid #838383;



  }

  .apply-button:disabled, .apply-button[disabled]{
    background: #C4C4C4;
    color: #838383;
    border: none;
    cursor: not-allowed;
  }

  .apply-button:disabled:hover, .apply-button[disabled]:hover{
    background: #C4C4C4;
    color: #838383;
  }
 
  .apply-button:hover{
    border-color: #C09F2C;
    background: #F3F5F9;
    transition: 0.5s;
  }

  .apply-button:active{
    background: #F3F5F9;
    border: none;
  }
  .row-text{
      max-width: 100%;
      display: inline;

      
  }
  ul.job__Detail__Span_Container{
      display: flex;
      list-style-type: none;
      /* margin-right: '20px'; */
      /* padding: '10px 10px 10px 0'; */
      padding-top:10px;
      padding-bottom: 10px;
      padding-right: 16px;
      padding-left: 16px;
          

      
  }
  ul.job__Detail__Span_Container li{
      display: inline-flex;
      margin: 3px;
      font-family: 'Inter';
      font-style: normal;
      font-weight: 500;
      font-size: 12px;
      color: #838383;
      align-items: center;
      width: 50%;

  }
  li:first-child > *:first-child{
    margin-right: 3%;
  }
  .row-bottom{
      position: absolute;
      bottom: 0;
      width: 100%;
      left: 50%;
      transform: translateX(-50%);
  }
  .free{
    background: #E0E0E0;
    border-radius:8px ;
    width: 80px;
    height: 18px;
    font-size: 0.75rem;
    line-height: 14.52px;
    display: flex;
    align-items: center;
    justify-content: center;

  }
  .row {
    top:10%;
    margin-left: auto;
    margin-right: auto;
    z-index: -1;
    width: 89%;
  }

  .row:after {
    content: "";
    display: table;
    clear: both;
  }

  .tasks-container{
    margin: 0 auto;
  }

  .container .share__Job__Btn {
    position: absolute;
    right: 3.5%;
    color: #C09F2C;
    top: 7%;
  }

.row #loading {
  display: block;
  margin: 1% auto;
}

@media screen and (min-width: 992px) {
  .container-wrapper .search__wrapper .search__container, .row{
    width: 87%;
  }

  .card{
    margin: 1% 0;
  }

  .container-wrapper .search__wrapper .search__container{
    margin-top: 1.5%;
  }
  .row > *{
    display: inline-block;
    margin-left: 0;
    margin-right: 3%;
    width: calc(94% / 3);
  }
  .row > *:nth-child(3n + 3){
    margin-right: 0;
  }
  .container .share__Job__Btn {
    top: 15%;
  }
  .row {
    padding-bottom: 4%;
  }
}
   
@media (min-width: 768px) and (max-width: 991.98px) {
  .container-wrapper .search__wrapper .search__container, .row{
    width: 85%;
  }

  .container-wrapper .search__wrapper .search__container{
    margin-top: 3%;
  }

  .row > *{
    display: inline-block;
    margin-left: 0;
    margin-right: 4%;
    width: calc(96% / 2);
  }
  .row > *:nth-child(2n + 2){
    margin-right: 0;
  }
  .row{
    margin-bottom: 2%;
  }
  .container .share__Job__Btn {
    top: 10%;
  }
}
  

